  - function SendMail() returns warnings from PEAR (alec)
  - bugfix: dummy nodes on Nodes Search Results list (alec)
  - lmsd/system: added option 'sql', run shell comand if is non-empty (alec)
  - in nodes and customers searching functions added workaround for
    postgresql ILIKE problem with national characters in UTF-8 (alec)

version 1.6.0rc1 Thor (13/05/2005):

  - lmsd/ethers: fixed output file format (alec)
  - fixed bug (made in last release) in chooseip module (alec)
  - keeping ShowOrHide status of boxes in customer info (alec)
  - BTS#0000337: fixed helpdesk tickets searching (alec)
  - lmsd: added option --inifile to ./configure script for configuration files
    support (alec)
  - lmsd: added command line option '-f' to run in foreground (without fork),
    fixed reload of instances with empty crontab on every minute, write last 
    reload time to database if reload was ordered, fixed problem with
    zombies (alec/G.Stanislawski)
  - BTS#0000338: can specify network device while node addition (alec)
  - lmsd: fixed -h option segfault (alec)
  - on customers list added nodes online status and icon for nodes connection 
    status change (alec)
  - additional filters for Customer Search, searching in service address (alec)
  - most of icons resized to 16x16 (alec)
  - fixed nodes and warnings enabling/disabling on Customer Search Results
    list (alec)
  - added "realname" field to account record (alec)
  - lms-mgc: added %CUSTOMER variable for node record (alec)
  - node's public IP (alec/kuba)
  - lms-squid: changed/fixed lms.ini section name to [redirector] (alec)
  - removed old contrib/squid_warnings (alec)
  - added option custom_accesstable for user-defined access rights (alec)
  - fixed devices desc on map when device has no IP, now device lastonline 
    status is getting from all connected nodes lastonline value (alec)
  - BTS#0000340: option [Account] on customer list accounts all customer's 
    covenants including invoices (alec)