@@ -13,6 +13,7 @@ version ? (??/??/????):
   - lmsd/system: added option 'sql', run shell comand if is non-empty (alec)
   - in nodes and customers searching functions added workaround for
     postgresql ILIKE problem with national characters in UTF-8 (alec)
+  - lmsd/dns: networks can share the same domain name (alec)
 
 version 1.6.0rc1 Thor (13/05/2005):
 
